--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.fullsteam"
         minSdk 29
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -38,7 +38,10 @@ android {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
-    kapt "android.arch.lifecycle:compiler:1.1.1"
+    implementation 'androidx.annotation:annotation:1.4.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    kapt 'android.arch.lifecycle:compiler:1.1.1'
     kapt 'com.github.bumptech.glide:compiler:4.13.2'
     kapt 'com.github.bumptech.glide:compiler:4.13.2'
     implementation 'androidx.core:core-ktx:1.8.0'
@@ -52,6 +55,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation 'com.google.firebase:firebase-firestore:24.2.2'
     implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.1'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
@@ -65,6 +71,13 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:8.0.1'
     implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.4'
     // Kotlin
+    implementation "androidx.camera:camera-core:1.2.0-beta01"
+    implementation "androidx.camera:camera-camera2:1.2.0-beta01"
+    implementation "androidx.camera:camera-lifecycle:1.2.0-beta01"
+    implementation "androidx.camera:camera-video:1.2.0-beta01"
+
+    implementation "androidx.camera:camera-view:1.2.0-beta01"
+    implementation "androidx.camera:camera-extensions:1.2.0-beta01"
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.1")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.1")
 
