--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.example.fullsteam"
         minSdk 29
-        targetSdk 33
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -71,13 +71,13 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:8.0.1'
     implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.4'
     // Kotlin
-    implementation "androidx.camera:camera-core:1.2.0-beta01"
-    implementation "androidx.camera:camera-camera2:1.2.0-beta01"
-    implementation "androidx.camera:camera-lifecycle:1.2.0-beta01"
-    implementation "androidx.camera:camera-video:1.2.0-beta01"
+    implementation "androidx.camera:camera-core:1.1.0"
+    implementation "androidx.camera:camera-camera2:1.1.0"
+    implementation "androidx.camera:camera-lifecycle:1.1.0"
+    implementation "androidx.camera:camera-video:1.1.0"
 
-    implementation "androidx.camera:camera-view:1.2.0-beta01"
-    implementation "androidx.camera:camera-extensions:1.2.0-beta01"
+    implementation "androidx.camera:camera-view:1.1.0"
+    implementation "androidx.camera:camera-extensions:1.1.0"
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.1")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.1")
 
